language/tests/error/TypeError05.hashem
bebin main() {
  f = 1 < 2;
  f();  
}  
